--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     
-<h1>HAI NONA !</h1> 
+<h1>Nona Juwita</h1>
+<h2> 6 July 1996</h2> 
+<h3>    Medan </h3>
+<h4> bagan deli</h4>
 </body>
 </html>
